Javadoc + bugfixes